--- a/find-cate-client/src/main/resources/templates/page/comment.html
+++ b/find-cate-client/src/main/resources/templates/page/comment.html
@@ -11,21 +11,21 @@
     <!-- Page Title -->
     <title>Listing &amp; Directory Website Template</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,700,900" rel="stylesheet">
     <!-- Simple line Icon -->
-    <link rel="stylesheet" href="css/simple-line-icons.css">
+    <link rel="stylesheet" href="/css/simple-line-icons.css">
     <!-- Themify Icon -->
-    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="/css/themify-icons.css">
     <!-- Hover Effects -->
-    <link rel="stylesheet" href="css/set1.css">
+    <link rel="stylesheet" href="/css/set1.css">
     <!-- Swipper Slider -->
-    <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="/css/swiper.min.css">
     <!-- Magnific Popup CSS -->
-    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="/css/magnific-popup.css">
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <!--============================= BOOKING DETAILS =============================-->
@@ -36,7 +36,7 @@
                         <hr>
                         <div class="customer-review_wrap">
                             <div class="customer-img">
-                                <img src="images/customer-img1.jpg" class="img-fluid" alt="#">
+                                <img src="/images/customer-img1.jpg" class="img-fluid" alt="#">
                                 <p>Amanda G</p>
                                 <span>35 Reviews</span>
                             </div>
@@ -61,9 +61,9 @@
                                     to bring cash.
                                 </p>
                                 <ul>
-                                    <li><img src="images/review-img1.jpg" class="img-fluid" alt="#"></li>
-                                    <li><img src="images/review-img2.jpg" class="img-fluid" alt="#"></li>
-                                    <li><img src="images/review-img3.jpg" class="img-fluid" alt="#"></li>
+                                    <li><img src="/images/review-img1.jpg" class="img-fluid" alt="#"></li>
+                                    <li><img src="/images/review-img2.jpg" class="img-fluid" alt="#"></li>
+                                    <li><img src="/images/review-img3.jpg" class="img-fluid" alt="#"></li>
                                 </ul>
                                 <span>28 people marked this review as helpful</span>
                                 <a href="#"><span class="icon-like"></span>Helpful</a>
@@ -72,7 +72,7 @@
                         <hr>
                         <div class="customer-review_wrap">
                             <div class="customer-img">
-                                <img src="images/customer-img2.jpg" class="img-fluid" alt="#">
+                                <img src="/images/customer-img2.jpg" class="img-fluid" alt="#">
                                 <p>Kevin W</p>
                                 <span>17 Reviews</span>
                             </div>
@@ -105,13 +105,13 @@
 
     <!-- jQuery, Bootstrap JS. -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <!-- Magnific popup JS -->
-    <script src="js/jquery.magnific-popup.js"></script>
+    <script src="/js/jquery.magnific-popup.js"></script>
     <!-- Swipper Slider JS -->
-    <script src="js/swiper.min.js"></script>
+    <script src="/js/swiper.min.js"></script>
     <script>
         var swiper = new Swiper('.swiper-container', {
             slidesPerView: 3,
